<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/plusBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plus" />

    <Button
        android:id="@+id/subtractBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/multiplyBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/divideBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/divide" />

    <EditText
        android:id="@+id/textFirst"
        android:inputType="number"
        android:hint="Input Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/textSecond"
        android:inputType="number"
        android:hint="Input Number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:ems="20"
        android:text="Answer" />

    <Button
        android:id="@+id/backToMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        tools:text="@string/backToMain" />


</LinearLayout>