<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".week_4_lecture_2">

    <include
        android:id="@+id/happToolbar"
        layout="@layout/app_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize" />

    <Button
        android:id="@+id/backToMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="21dp"
        app:layout_constraintBottom_toTopOf="@+id/animalFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.943"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.594"
        tools:text="@string/backToMain" />

    <Button
        android:id="@+id/confirmAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="260dp"
        android:text="Confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.839"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304" />

    <CheckBox
        android:id="@+id/checkBoxStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="Okay"
        app:layout_constraintBottom_toTopOf="@+id/animalFrame"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.175" />

    <FrameLayout
        android:id="@+id/animalFrame"
        android:layout_width="291dp"
        android:layout_height="211dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.876">

        <ImageView
            android:id="@+id/catImgView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <RadioGroup
        android:id="@+id/animalGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/happToolbar">

        <RadioButton
            android:id="@+id/doggie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/doggie" />

        <RadioButton
            android:id="@+id/cat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cat" />

        <RadioButton
            android:id="@+id/rabbit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rabbit" />
    </RadioGroup>

    <TextView
        android:id="@+id/checkStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="21dp"
        android:text="@string/askStart"
        app:layout_constraintBottom_toTopOf="@+id/checkBoxStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/happToolbar"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/selectAnimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/askAnimal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.269" />

</androidx.constraintlayout.widget.ConstraintLayout>